# hve-core

./: .checkov.yaml  .cspell.json  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  .mural-credentials.example  .npmrc  .poutine.yml  .release-please-manifest.json  .vally.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES  TRANSPARENCY-NOTE.md  audit-ci.json  check_yaml.py  codecov.yml  dumpty.package.yaml  getid.ps1  lint_links.txt  lint_md.json  lint_md_links_output.txt  lint_md_output.txt  lint_output.txt  output.txt  package-lock.json  package.json  parse_results.py  (+10 more)
.claude/: launch.json
.cspell/: azure-services.txt  general-technical.txt  industry-acronyms.txt  microsoft-sample-companies.txt
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  CUSTOM-AGENTS.md  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  README.md  actionlint.yaml  dependabot.yml  (+5 more)
.github/skills/experimental/powerpoint/: SECURITY.md  SKILL.md  content-extra-py-template.md  content-yaml-template.md  pyproject.toml  style-yaml-template.md
.github/skills/experimental/powerpoint/customer-card-render/references/: mapping-spec.md
.github/skills/experimental/powerpoint/customer-card-render/scripts/: build-cards.ps1  generate_cards.py
.github/skills/experimental/powerpoint/references/: scripts.md
.github/skills/experimental/powerpoint/scripts/: Invoke-EmbedAudio.ps1  Invoke-ExportSvg.ps1  Invoke-GenerateThemes.ps1  Invoke-PptxPipeline.ps1  build_deck.py  embed-audio.sh  embed_audio.py  export-svg.sh  export_slides.py  export_svg.py  extract_content.py  generate-themes.sh  generate_themes.py  invoke-pptx-pipeline.sh  pdf_safety.py  pptx_charts.py  pptx_colors.py  pptx_fills.py  pptx_fonts.py  pptx_tables.py  pptx_text.py  pptx_utils.py  render_pdf_images.py  validate_deck.py  validate_geometry.py  validate_slides.py
.github/skills/experimental/powerpoint/tests/: Invoke-EmbedAudio.Tests.ps1  Invoke-ExportSvg.Tests.ps1  Invoke-GenerateThemes.Tests.ps1  Invoke-PptxPipeline.Tests.ps1  conftest.py  fuzz_harness.py  strategies.py  test_build_deck.py  test_embed_audio.py  test_export_slides.py  test_export_svg.py  test_extract_content.py  test_extract_content_integration.py  test_fuzz_build_deck.py  test_fuzz_pdf_safety.py  test_fuzz_pptx_colors.py  test_fuzz_pptx_tables.py  test_fuzz_validate_slides.py  test_generate_themes.py  test_pdf_safety.py  test_pptx_colors.py  test_pptx_fonts.py  test_pptx_text.py  test_pptx_utils.py  test_render_pdf_images.py  test_validate_deck.py  test_validate_geometry.py  test_validate_slides.py
.github/skills/experimental/powerpoint/tests/corpus/: README.md  generate_seeds.py
.github/skills/experimental/tts-voiceover/: SECURITY.md  SKILL.md  pyproject.toml
.github/skills/experimental/tts-voiceover/scripts/: Invoke-EmbedAudio.ps1  Invoke-GenerateVoiceover.ps1  embed-audio.sh  embed_audio.py  generate-voiceover.sh  generate_voiceover.py
.github/skills/experimental/tts-voiceover/scripts/Modules/: TtsVoiceoverHelpers.psm1
.github/skills/experimental/tts-voiceover/tests/: TtsVoiceoverHelpers.Tests.ps1  fuzz_harness.py  test_embed_audio.py  test_generate_voiceover.py
scripts/cost/: __init__.py  aggregate_token_priors.py  estimate_agent_cost.py  pyproject.toml
scripts/cost/tests/: fuzz_harness.py  test_aggregate_token_priors.py  test_estimate_agent_cost.py
scripts/evals/moderation/: moderate.py  pip-audit-known-vulnerabilities.txt  pyproject.toml  requirements.txt
scripts/evals/moderation/tests/: fuzz_harness.py  test_moderate.py
scripts/evals/task-researcher-comparison/: README.md  pyproject.toml
scripts/evals/task-researcher-comparison/fixtures/: scenarios.yml
scripts/evals/task-researcher-comparison/fixtures/outputs/codebase-lane/: no-subagents.md  with-subagents.md
scripts/evals/task-researcher-comparison/fixtures/outputs/external-api/: no-subagents.md  with-subagents.md
scripts/evals/task-researcher-comparison/fixtures/outputs/focused-local/: no-subagents.md  with-subagents.md
scripts/evals/task-researcher-comparison/hve_core_task_researcher_comparison.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/evals/task-researcher-comparison/task_researcher_comparison/: __init__.py  capture.py  deepeval_metrics.py  fixtures.py  models.py  report.py  static_metrics.py
scripts/evals/task-researcher-comparison/tests/: __init__.py  fuzz_harness.py  test_capture.py  test_deepeval_metrics.py  test_report.py  test_static_metrics.py
(+4066 files in other folders)
